[package]
name = "cue"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for cue monorepo orchestration tool"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

[dependencies]
cue-common = { path = "../common" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
