[package]
name = "cue"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for cue monorepo orchestration tool"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

[dependencies]
cue-common = { path = "../common" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
humantime = "2.1"
bytesize = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
serde_json = "1.0"
